--- a/RoomDebts/ViewControllers/Checks/Storyboard/Checks.storyboard
+++ b/RoomDebts/ViewControllers/Checks/Storyboard/Checks.storyboard
@@ -18,16 +18,16 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Checks View Controller-->
+        <!--Checks-->
         <scene sceneID="xW3-H3-0k2">
             <objects>
-                <viewController id="FXM-sa-TKm" customClass="ChecksViewController" customModule="RoomDebts" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Checks" id="FXM-sa-TKm" customClass="ChecksViewController" customModule="RoomDebts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LSF-hW-Ovn" customClass="GradientView" customModule="RoomDebts" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xLn-m6-sdU">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -228,6 +228,7 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="tableView" destination="xLn-m6-sdU" id="Iiu-Mf-zLQ"/>
                     </connections>
