--- a/RoomDebts/ViewControllers/Debts/Storyboard/Debts.storyboard
+++ b/RoomDebts/ViewControllers/Debts/Storyboard/Debts.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="juf-cg-BWY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="juf-cg-BWY">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -340,6 +340,7 @@
                     <connections>
                         <outlet property="tableView" destination="gGp-hr-05T" id="8km-f9-XiX"/>
                         <segue destination="5Mi-S8-0C2" kind="presentation" identifier="ShowCreateDebt" id="AFq-AD-rv7"/>
+                        <segue destination="kxI-Oe-uOZ" kind="presentation" identifier="Unauthorized" id="WoJ-mM-heW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZLe-Fn-3QM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -353,6 +354,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e6M-Gk-ewp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="785" y="164"/>
+        </scene>
+        <!--Welcome-->
+        <scene sceneID="n8b-gl-gfr">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Welcome" id="kxI-Oe-uOZ" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nf5-pX-ltC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="796" y="50"/>
         </scene>
     </scenes>
     <resources>
